# cockpit-doc

./: .env.example  .gitattributes  .gitignore  30_60_90天现金流预测模块_MVP技术方案初稿.html  404.html  CEO现金流驾驶舱V1.0_MVP技术方案讨论稿.html  CEO现金流驾驶舱V1.0_产品边界说明.html  CEO现金流驾驶舱V1.0_字段算法与数据来源清单.html  CEO现金流驾驶舱V1.0_财务数据接入与标准模板对接说明.html  CEO经营决策系统_团队Agent交接说明.html  MVP后端待确认口径清单.html  README.md  V3_API设计.html  V3_MVP后端主要实现说明.html  V3_MVP后端数据流图.html  V3_交付索引.html  V3_数据库表结构与字段字典.html  V3_计算规则与CFO确认表.html  docker-compose.yml  hashmap.json  index.html  start-dev.sh  今日老板要拍板模块_MVP技术方案初稿.html  付款建议Top3模块_MVP技术方案初稿.html  回款风险Top3模块_MVP技术方案初稿.html  项目V1.0落地执行方案.html
server/: .dockerignore  .env.example  AGENT.md  API_IMPLEMENTATION.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260702_0001_v3_initial.py  20260705_0002_decision_outputs.py  20260706_0003_payment_assessment_ai_explanation.py
server/app/: main.py
server/app/core/: config.py  exceptions.py
server/app/database/: base.py  session.py
server/app/modules/ai/: __init__.py  client.py  controller.py  prompts.py  service.py
server/app/modules/cashflow/: calculators.py  controller.py  forecast.py  models.py
server/app/modules/dashboard/: controller.py  service.py
server/app/modules/data_import/: controller.py  models.py  parsers.py  service.py
server/app/modules/decision/: controller.py  models.py  service.py
server/tests/integration/: test_api.py
server/tests/unit/: test_calculators.py  test_income_reconciliation.py  test_parser.py
(+306 files in other folders)
